--- a/symfony/templates/default/index.html.twig
+++ b/symfony/templates/default/index.html.twig
@@ -3,30 +3,48 @@
 {% block title %}Woodeo | Accueil{% endblock %}
 
 {% block body %}
-<div class="text-white text-xl px-24"><div class="text-6xl pb-4">Bienvenue sur Woodeo,</div>
+<div class="text-white text-xl px-16"><div class="text-6xl pb-4">Bienvenue sur Woodeo,</div>
 Nous vous permettons de suivre vos séries et animés préférés !
 Plongez dans le monde merveilleux des séries à travers notre site et découvrez les critiques
 ainsi que toutes les informations à propos de vos feuilletons favoris.
 Vous pouvez suivre toutes les séries que vous voulez, à tout moment, en un seul clic.</div>
- {{ form_start(form) }}
-        </form>
-        <form class="wrap" action="{{ path('app_series_index') }}" method="get">
-        <div class="flex flex-row m-8 mx-24 py-10">
-            <div>
-                {{ form_row(form.genre, { 'attr': {'class': 'flex-shrink-0 z-10 inline-flex items-center py-2.5 px-4 text-sm font-medium text-left text-gray-900 bg-gray-100 border border-gray-300 rounded-l-lg hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-gray-700 dark:text-white dark:border-gray-600'} }) }}
-            </div>
-            <div>
-                {{ form_row(form.Trier, { 'attr': {'class': 'flex-shrink-0 z-10 inline-flex items-center py-2.5 px-4 text-sm font-medium text-left text-gray-900 bg-gray-100 border border-gray-300 hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-gray-700 dark:text-white dark:border-gray-600'} }) }}
-            </div>
-            <div class="relative w-full">
-                {{ form_row(form.titre, { 'attr': {'class': 'block p-2.5 w-full z-20 text-sm text-gray-900 bg-gray-50 rounded-r-lg border-l-gray-50 border-l-2 border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-l-gray-700  dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:border-blue-500', 'placeholder': 'Titre de série' } }) }}
-                <button type="submit" class="absolute top-0 right-0 p-2.5 text-sm font-medium text-white bg-blue-700 rounded-r-lg border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-                        <svg aria-hidden="true" class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg>
-                        <span class="sr-only">Search</span>
-                    </button>
-            </div>
+{{ form_start(form) }}
+</form>
+<form class="wrap pb-10" action="{{ path('app_series_index') }}" method="get">
+    <div class="flex flex-row m-8 mx-24 py-0">
+        <div>
+            {{ form_row(form.genre, { 'attr': {'class': 'flex-shrink-0 z-10 inline-flex items-center py-2.5 px-4 text-sm font-medium text-left text-gray-900 bg-gray-100 border border-gray-300 rounded-l-lg hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-gray-700 dark:text-white dark:border-gray-600'} }) }}
         </div>
-        {{ form_end(form) }}
+        <div>
+            {{ form_row(form.Trier, { 'attr': {'class': 'flex-shrink-0 z-10 inline-flex items-center py-2.5 px-4 text-sm font-medium text-left text-gray-900 bg-gray-100 border border-gray-300 hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-gray-700 dark:text-white dark:border-gray-600'} }) }}
+        </div>
+        <div class="relative w-full">
+            {{ form_row(form.titre, { 'attr': {'class': 'block p-2.5 w-full z-20 text-sm text-gray-900 bg-gray-50 rounded-r-lg border-l-gray-50 border-l-2 border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-l-gray-700  dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:border-blue-500', 'placeholder': 'Titre de série' } }) }}
+            <button type="submit" class="absolute top-0 right-0 p-2.5 text-sm font-medium text-white bg-blue-700 rounded-r-lg border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                    <svg aria-hidden="true" class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg>
+                    <span class="sr-only ">Search</span>
+                </button>
+        </div>
+    </div>
+    <div class="flex mt-1">
+        <div class="mx-24">
+            <label for="dateMin" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Année début</label>
+            {{ form_row(form.dateMin, { 'attr': {'class': 'bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500'} })  }}
+        </div>
+        <div class="mx-24">
+            <label for="dateMax" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Année fin</label>
+            {{ form_row(form.dateMax, { 'attr': {'class': 'bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500'} })  }}
+        </div>
+        <div class="mx-24">
+            <label for="noteMin" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Note minimal</label>
+            {{ form_row(form.noteMin, { 'attr': {'class': 'bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500'}, 'type': 'number' })  }}
+        </div>
+        <div class="mx-24">
+            <label for="noteMax" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Note maximal</label>
+            {{ form_row(form.noteMax, { 'attr': {'class': 'bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500'}, 'type': 'number' })  }}
+        </div>
+    </div>
+{{ form_end(form) }}
 
 
 <iframe src="{{ path('app_series_random')}}" class="w-full h-80 "></iframe>
