--- a/symfony/templates/user/index.html.twig
+++ b/symfony/templates/user/index.html.twig
@@ -18,19 +18,22 @@
                     <div class="flex justify-between">
                     {% if app.user.isAdmin() %}
                     <a href="{{ path('app_user_gen', {'id':5000})}} "><button class="text-lg text-center bg-green-600 p-2 px-5 rounded-xl  text-grey  mb-2">Créer 5000 utilisateurs</button></a>
+                    <a href="{{ path('app_user_autodel')}} "><button class="text-lg text-center bg-red-700 p-2 px-5 rounded-xl text-grey mb-2">Supprimer les faux comptes</button></a>
                     {% endif %}
-                    {% if app.user.isAdmin() %}
-                    <a href="{{ path('app_rating_gen', {'id':1})}} "><button class="bg-green-600 text-lg text-center p-2 px-5 rounded-xl  text-grey mb-2">Générer 10 000 critiques</button></a>
-                    {% endif %}
+
                     </div>
                     <div class="flex flex-row-reverse justify-between">
                     {% if app.user.isAdmin() %}
-                        <a href="{{ path('app_rating_del')}} "><button class="text-lg bg-red-700 text-center p-2 px-5 rounded-xl  text-grey mb-2">Supprimer les critiques</button></a>
-                    {% endif %}
-                    {% if app.user.isAdmin() %}
-                        <a href="{{ path('app_user_autodel')}} "><button class="text-lg text-center bg-red-700 p-2 px-5 rounded-xl text-grey mb-2">Supprimer les faux comptes</button></a>
+                    <a href="{{ path('app_rating_del')}} "><button class="text-lg bg-red-700 text-center p-2 px-5 rounded-xl  text-grey mb-2"> Supprimer les critiques </button></a>
+                    <a href="{{ path('app_rating_gen', {'id':1})}} "><button class="bg-green-600 text-lg text-center p-2 px-5 rounded-xl  text-grey mb-2">Générer 1000 critiques</button></a>
                     {% endif %}
                     </div>
+
+                    <div class="flex flex-row-reverse justify-between">
+                    {% if app.user.isAdmin() %}
+                    <a href="{{ path('app_user_autoDelSuivi')}} "><button class="text-lg text-center bg-red-700 p-2 px-5 rounded-xl text-grey mb-2"> Supprimer les faux suivis </button></a>
+                    <a href="{{ path('app_user_genSuivi', {'id':2})}} "><button class="bg-green-600 text-lg text-center p-2 px-5 rounded-xl  text-grey mb-2">Générer 1000 faux suivis</button></a>
+                    {% endif %}
         {% endif %}
         </div>
 
