--- a/symfony/templates/rating/accepting.html.twig
+++ b/symfony/templates/rating/accepting.html.twig
@@ -5,11 +5,15 @@
 {% block body %}
     <div class="w-4/5 mx-auto text-white">
         <h1 class="text-3xl font-bold mb-5" >Fenêtre d'acceptation des critiques</h1>
-        <h1 class="text-3xl font-bold mb-5" >{{ ratings|length }} critiques à accepter</h1>
+        {% if ratings|length == 1 %}
+        <h1 class="text-2xl font-semibold mb-5" >{{ ratings|length }} critique à accepter</h1>
+        {% else %}
+        <h1 class="text-2xl font-semibold mb-5" >{{ ratings|length }} critiques à accepter</h1>
+        {% endif %}
         <div class="flex flex-wrap w-full">
             {% for r in ratings %}
                 {% if r.comment != null %}
-                    <div class="bg-blue-800 w-max m-2 rounded-lg">
+                    <div class="bg-blue-800 w-max max-w-md m-2 rounded-lg">
                         <h1 class="text-sm p-2 pb-1">Ajouté le {{ r.date ? r.date|date('d-m-Y') : '' }}</h1>
                         {% if r.getDate.diff(dateActuelle).format("%a") > 0 %}
                             <h1 class="text-sm p-2 pb-1">Il y a {{ r.getDate.diff(dateActuelle).format("%a") }} jours</h1>
