--- a/symfony/templates/user/show.html.twig
+++ b/symfony/templates/user/show.html.twig
@@ -41,23 +41,23 @@
     <div class="flex">
         <div class="ml-0">
             {% if user.getFollowers|length == 1 %}
-                <a href="{{ path('app_user_see_followers', {'id': user.id})}} "><button type="submit" class="font-semibold mb-2 rounded-2xl bg-white p-2 px-5">Voir son follower</button></a>
+                <a href="{{ path('app_user_see_followers', {'id': user.id})}} "><button type="submit" class="font-semibold mb-2 rounded-2xl bg-white hover:bg-blue-500 hover:text-white p-2 px-5">Voir son follower</button></a>
             {% elseif user.getFollowers|length == 0 %}
-                <a href="{{ path('app_user_see_followers', {'id': user.id})}} "><button type="submit" class="font-semibold rounded-2xl mb-2 bg-white p-2 px-5">Pas de follower</button></a>
+                <a href="{{ path('app_user_see_followers', {'id': user.id})}} "><button type="submit" class="font-semibold rounded-2xl mb-2 bg-white hover:bg-blue-500 hover:text-white p-2 px-5">Pas de follower</button></a>
             {% else %}
-                <a href="{{ path('app_user_see_followers', {'id': user.id})}} "><button type="submit" class="font-semibold rounded-2xl mb-2 bg-white p-2 px-5">Voir ses {{ user.getFollowers|length }} followers</button></a>
+                <a href="{{ path('app_user_see_followers', {'id': user.id})}} "><button type="submit" class="font-semibold rounded-2xl mb-2 bg-white hover:bg-blue-500 hover:text-white p-2 px-5">Voir ses {{ user.getFollowers|length }} followers</button></a>
             {% endif%}
 
             {% if user.getFollowing|length == 1 %}
-                <a href="{{ path('app_user_see_follows', {'id': user.id})}} "><button type="submit" class="font-semibold rounded-2xl bg-white p-2 px-5">Voir son follow</button></a>
+                <a href="{{ path('app_user_see_follows', {'id': user.id})}} "><button type="submit" class="font-semibold rounded-2xl hover:bg-blue-500 hover:text-white bg-white p-2 px-5">Voir son follow</button></a>
             {% elseif user.getFollowing|length == 0 %}
-                <a href="{{ path('app_user_see_follows', {'id': user.id})}}"><button type="submit" class="font-semibold rounded-2xl bg-white p-2 px-5">Pas de follow</button></a>
+                <a href="{{ path('app_user_see_follows', {'id': user.id})}}"><button type="submit" class="font-semibold rounded-2xl bg-white hover:bg-blue-500 hover:text-white p-2 px-5">Pas de follow</button></a>
             {% else %}
-                <a href="{{ path('app_user_see_follows', {'id': user.id})}}"><button type="submit" class="font-semibold rounded-2xl bg-white p-2 px-5">Voir ses {{ user.getFollowing|length }} follows</button></a>
+                <a href="{{ path('app_user_see_follows', {'id': user.id})}}"><button type="submit" class="font-semibold rounded-2xl bg-white hover:bg-blue-500 hover:text-white p-2 px-5">Voir ses {{ user.getFollowing|length }} follows</button></a>
             {% endif%}
         </div>
     </div>
-        <a href="{{ path('app_series_index') }}"><button class=" text-white bg-blue-700 hover:bg-blue-600 p-2 rounded-2xl m-5 ml-0" type="submit" >Retour à l'accueil</button></a>
+        <a href="{{ path('app_series_index') }}"><button class=" text-white bg-blue-700 hover:bg-blue-600 p-2 rounded-2xl px-5 m-5 ml-0" type="submit" >Retour à la liste des séries</button></a>
         <div class="flex items-center justify-between flex-wrap">
         <h1 class="text-3xl text-cyan-200 mb-2 font-semibold">{{ user.name }}</h1>
         
@@ -131,7 +131,7 @@
        
         {% for rate in rates %}
         {% if rate.accepted %}
-        <div class="flex-col bg-white m-2 p-2 font-semibold rounded-2xl">
+        <div class="flex-col bg-white m-2 p-2 font-semibold max-w-md rounded-2xl">
             <div class="flex justify-between items-center">
                 <h1 class="text-2xl mr-5">{{ rate.series }}</h1>
                 <div class="flex items-center">
