--- a/symfony/templates/season/_delete_form.html.twig
+++ b/symfony/templates/season/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('app_season_delete', {'id': season.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ season.id) }}">
-    <button class="btn">Delete</button>
+    <button class="bg-red-700 px-4 p-1 rounded">Supprimer la saison</button>
 </form>
