--- a/symfony/templates/season/edit.html.twig
+++ b/symfony/templates/season/edit.html.twig
@@ -3,16 +3,37 @@
 {% block title %}Modifier la saison {{ season.number }} de {{ season.series.title }} {% endblock %}
 
 {% block body %}
-    <h1>Modifier la saison {{ season.number }} de {{ season.series.title }}</h1>
+<div class="flex flex-wrap justify-around w-4/5 items-center mx-auto text-white">
+   
+    <div class="flex flex-col text-center">
+        <a class="bg-blue-500 w-max p-1 px-4 rounded mb-5 text-black" href="{{ path('app_series_edit', {'id': season.series.id}) }}">Retour a la série</a>
+    <h1 class="text-2xl font-semibold mb-5">Modifier la saison {{ season.number }} de {{ season.series.title }}</h1>
 
-    {{ include('season/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('app_series_edit', {'id': season.series.id}) }}">Retour a la série</a>
-
+    
+    {{ form_start(form) }}
+<div class="flex flex-col">
+    {{ form_row(form.number, {
+        'attr': { 'class': 'p-0.5 px-2 text-black rounded mx-2'},
+        'label': 'Nunméro de saison',
+    }) }}
+<button class="bg-green-500 w-max px-4 p-1 rounded mx-auto mt-5">{{ button_label|default('Mettre à jour la série') }}</button>
+</div>
+{{ form_end(form) }}
+    <div class="mt-5">
     {{ include('season/_delete_form.html.twig') }}
-    {% for episod in season.episodes %}
-        <a href="{{ path('app_episode_edit', {'id': episod.id}) }}">{{ episod.number }} - {{ episod.title }}</a>
-        <br>
-    {% endfor %}
-    <a href="{{ path('app_episode_new', {'season': season.id}) }}">Ajouter un nouvel episode</a>
+    </div>
+
+    
+
+    
+    </div>
+    <div class=" flex flex-col">
+        <h1 class="mt-5 mb-10 text-2xl font-bold">Liste des épisodes</h1>
+        {% for episod in season.episodes %}
+            <a class="hover:bg-blue-500 hover:text-black w-max p-2 px-4 rounded m-0 font-semibold" href="{{ path('app_episode_edit', {'id': episod.id}) }}">{{ episod.number }} - {{ episod.title }}</a>
+            <br>
+        {% endfor %}
+        <a class="bg-green-500 px-4 p-1 rounded" href="{{ path('app_episode_new', {'season': season.id}) }}">Ajouter un nouvel episode</a>
+    </div>
+</div>
 {% endblock %}
